FontAwesome  + Ng Service + DI

--- a/src/app/components/payment-cards/payment-cards.component.html
+++ b/src/app/components/payment-cards/payment-cards.component.html
@@ -1,3 +1,5 @@
 <div className="payment-options">
-  <span *ngFor="let card of cards">{{ card.title }}</span>
+  <span *ngFor="let card of cards">
+    <fa-icon [icon]="card"></fa-icon>
+  </span>
 </div>
