--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/my-account">
           My Account
-          <i class="fa-user-circle"></i>
+          <fa-icon icon="user-circle"></fa-icon>
         </a>
       </li>
       <li class="nav-item">
@@ -22,7 +22,7 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/my-cart">
           Cart
-          <i class="fa-shopping-cart"></i>
+          <fa-icon icon="shopping-cart"></fa-icon>
 
           <span class="badge badge-danger">12</span>
         </a>
