Redux + Login/Register

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -101,6 +101,11 @@
                 {{ errorMessage }}
               </div>
             </div>
+            <div class="form-group" *ngIf="httpMsg">
+              <div class="alert alert-success" role="alert">
+                {{ httpMsg }}
+              </div>
+            </div>
 
             <Hr />
             <div class="form-row justify-content-center mt-4">
