--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,50 @@
-<p>login works!</p>
+<div class="page registration-page p-4">
+  <div class="row justify-content-center">
+    <div class="col-8">
+      <div class="row">
+        <p class="h4 col-12 text-center">Login</p>
+      </div>
+      <div class="row mt-4">
+        <div class="col-12">
+          <form (submit)="onSubmit()" [formGroup]="profileForm">
+            <div class="form-group">
+              <label for="username">Email address</label>
+              <input
+                type="email"
+                id="username"
+                class="form-control"
+                formControlName="username"
+              />
+            </div>
+            <div class="form-group">
+              <label for="password">Password</label>
+              <input
+                id="password"
+                type="password"
+                class="form-control"
+                formControlName="password"
+              />
+            </div>
+            <div class="form-group">
+              <button type="submit" class="btn btn-primary w-100">Login</button>
+            </div>
+            <div class="form-group" *ngIf="errorMessage">
+              <div class="alert alert-danger" role="alert">
+                {{ errorMessage }}
+              </div>
+            </div>
+
+            <Hr />
+            <div class="form-row justify-content-center mt-4">
+              <div class="form-group col-6">
+                <a routerLink="/register" class="form-control btn btn-primary">
+                  Not a user? Click here to Register.
+                </a>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
