--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -37,7 +37,11 @@
             <Hr />
             <div class="form-row justify-content-center mt-4">
               <div class="form-group col-6">
-                <a routerLink="/register" class="form-control btn btn-primary">
+                <a
+                  routerLink="/register"
+                  [queryParams]="returnTo"
+                  class="form-control btn btn-primary"
+                >
                   Not a user? Click here to Register.
                 </a>
               </div>
