--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,6 +5,8 @@
       class="col-3"
       *ngFor="let product of products"
       [product]="product"
+      [isInCart]="isInCart(product)"
+      [isFavorite]="isFavorite(product)"
     ></app-product-card>
   </div>
 </div>
