--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,19 @@
-<div class="col-2 h-100"></div>
-<div class="col-10 h-100">
-  <div class="row">
-    <app-product-card
-      class="col-3"
-      *ngFor="let product of products"
-      [product]="product"
-      [isInCart]="isInCart(product)"
-      [isFavorite]="isFavorite(product)"
-    ></app-product-card>
+<div class="row justify-content-center">
+  <div class="col-2 p-2 border-right" *ngIf="leftNav">
+    <app-accordion
+      [cells]="leftNav"
+      (onSelection)="onSelection($event)"
+    ></app-accordion>
+  </div>
+  <div class="col-10">
+    <div class="row">
+      <app-product-card
+        class="col-3"
+        *ngFor="let product of getProducts()"
+        [product]="product"
+        [isInCart]="isInCart(product)"
+        [isFavorite]="isFavorite(product)"
+      ></app-product-card>
+    </div>
   </div>
 </div>
