--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
-<!-- <fa-icon icon="userIcon"></fa-icon> -->
 <app-footer></app-footer>
+<app-spinner></app-spinner>
