--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -32,7 +32,7 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/my-orders"> Orders </a>
       </li>
-      <li class="nav-item" *ngIf="isLoggedIn">
+      <li class="nav-item btn--logout" *ngIf="isLoggedIn" (click)="onLogout()">
         <span class="nav-link"> Logout </span>
       </li>
     </ul>
