--- a/src/app/pages/my-cart/my-cart.component.html
+++ b/src/app/pages/my-cart/my-cart.component.html
@@ -1,1 +1,20 @@
-<p>my-cart works!</p>
+<div class="cart-page px-2">
+  <h2>Shopping Cart</h2>
+  <hr />
+  <app-item-table
+    [items]="products"
+    (onAction)="onRemove($event)"
+    actionLabel="Remove from Cart"
+  ></app-item-table>
+
+  <div class="order-summary p-2">
+    <div class="row text-center">
+      <div class="col-6">Order Total: {{ orderTotal | currencyInr }}</div>
+      <div class="col-6">
+        <a routerLink="/delivery" class="btn btn-primary"> Checkout </a>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+        <a routerLink="/checkout" class="btn btn-primary"> Stripe Checkout </a>
+      </div>
+    </div>
+  </div>
+</div>
