--- a/src/app/pages/my-cart/my-cart.component.html
+++ b/src/app/pages/my-cart/my-cart.component.html
@@ -1,20 +1,45 @@
 <div class="cart-page px-2">
   <h2>Shopping Cart</h2>
   <hr />
-  <app-item-table
-    [items]="products"
-    (onAction)="onRemove($event)"
-    actionLabel="Remove from Cart"
-  ></app-item-table>
 
-  <div class="order-summary p-2">
-    <div class="row text-center">
-      <div class="col-6">Order Total: {{ orderTotal | currencyInr }}</div>
-      <div class="col-6">
-        <a routerLink="/delivery" class="btn btn-primary"> Checkout </a>
-        &nbsp;&nbsp;&nbsp;&nbsp;
-        <a routerLink="/checkout" class="btn btn-primary"> Stripe Checkout </a>
+  <ng-container
+    *ngIf="isCartEmpty; then empty_cart_msg; else user_cart"
+  ></ng-container>
+
+  <ng-template #user_cart>
+    <app-item-table
+      [items]="products"
+      (onAction)="onRemove($event)"
+      actionLabel="Remove from Cart"
+    ></app-item-table>
+
+    <div class="order-summary p-2">
+      <div class="row text-center">
+        <span class="col-6" *ngIf="orderTotalSale === orderTotal">
+          Order Total: {{ orderTotal | currencyInr }}
+        </span>
+        <ng-container *ngIf="orderTotalSale !== orderTotal">
+          <div class="col-6" *ngIf="orderTotalSale">
+            Order Total:
+            <span style="text-decoration: line-through">
+              {{ orderTotal | currencyInr }}
+            </span>
+            <span class="text-danger">{{ orderTotalSale | currencyInr }}</span>
+          </div>
+        </ng-container>
+        <div class="col-6">
+          <a routerLink="/delivery" class="btn btn-primary"> Checkout </a>
+          &nbsp;&nbsp;&nbsp;&nbsp;
+          <a routerLink="/checkout" class="btn btn-primary">
+            Stripe Checkout
+          </a>
+        </div>
       </div>
     </div>
-  </div>
+  </ng-template>
+  <ng-template #empty_cart_msg>
+    <h4 class="text-center mb-4">
+      Your cart is empty. <a routerLink="/">Click to Shop.</a>
+    </h4>
+  </ng-template>
 </div>
