--- a/src/app/components/address-card/address-card.component.html
+++ b/src/app/components/address-card/address-card.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" *ngIf="address">
   <div class="card-header d-flex justify-content-between">
     <span>{{ address.line1 }}</span>
     <span>
