--- a/src/app/components/card-card/card-card.component.html
+++ b/src/app/components/card-card/card-card.component.html
@@ -1,8 +1,8 @@
 <div
-  class="card"
-  onMouseEnter="{this.onMouseEnter}"
-  onMouseLeave="{this.onMouseLeave}"
   *ngIf="card"
+  class="card"
+  (mouseenter)="onMouseEnter()"
+  (mouseleave)="onMouseLeave()"
 >
   <div class="card-header d-flex justify-content-between">
     <span>{{ card.holderName }}</span>
@@ -18,31 +18,34 @@
   </div>
   <div class="card-body">
     <h5 class="card-title">
-      <!-- TODO: Creat pipe for `maskCardNumber` -->
-      {{ card.holderName }} - {{ card.cardNumber }}
+      {{ card.holderName }} - {{ card.cardNumber | maskCcNum }}
     </h5>
 
-    <!-- TODO: Template -->
-
-    <!-- <form (submit)="_onPayNow()">
+    <form ngForm (submit)="_onPayNow()">
       <div class="form-row" *ngIf="showSecurityFields">
         <div class="form-group col-4">
           <label htmlFor="cvv">CVV</label>
           <input
+            [(ngModel)]="paymentForm.cvv"
             type="text"
             class="form-control"
             id="cvv"
             required
             name="cvv"
-            minLength="{3}"
-            maxLength="{3}"
+            minLength="3"
+            maxLength="3"
             placeholder="123"
-            onKeyUp="{this.onKeyUp}"
+            (keyup)="onKeyUp()"
           />
         </div>
         <div class="form-group col-4">
           <label htmlFor="expiryMonth">Expiry Month</label>
-          <select id="expiryMonth" name="expiryMonth" class="form-control">
+          <select
+            id="expiryMonth"
+            name="expiryMonth"
+            class="form-control"
+            [(ngModel)]="paymentForm.expiryMonth"
+          >
             <option [value]="i" *ngFor="let m of months; index as i">
               {{ m }}
             </option>
@@ -55,6 +58,7 @@
             id="expiryYear"
             name="expiryYear"
             class="form-control"
+            [(ngModel)]="paymentForm.expiryYear"
           >
             <option [value]="y" *ngFor="let y of getValidCCYears()">
               {{ y }}
@@ -68,14 +72,13 @@
         type="text"
         id="card-id"
         name="cardId"
-        value="{card.id}"
         style="display: none"
+        [(ngModel)]="paymentForm.cardId"
       />
 
       <button
         id="pay-now"
         type="submit"
-        data-value="{card.id}"
         [disabled]="!hasValue"
         class="btn"
         [ngClass]="{ 'btn-primary': hasValue, 'btn-secondary': !hasValue }"
@@ -83,6 +86,6 @@
       >
         {{ hasValue ? "Pay Now" : "Pay with this card" }}
       </button>
-    </form> -->
+    </form>
   </div>
 </div>
