--- a/src/app/pages/payment/payment.component.html
+++ b/src/app/pages/payment/payment.component.html
@@ -17,10 +17,10 @@
   </div>
 
   <div class="row m-5" *ngIf="showForm">
-    <h2 class="col-12">{{ isEdit ? "Edit Card" : "Add new Card" }}</h2>
+    <h2 class="col-12">{{ editCardId ? "Edit Card" : "Add new Card" }}</h2>
     <app-card-form
       class="col-12"
-      [isEdit]="isEdit"
+      [isEdit]="!!editCardId"
       [card]="cardToBeEdited"
       (onSubmit)="onSubmit($event)"
     ></app-card-form>
